# mc_franka

./: .clang-format  .clang-format-common.sh  .gitignore  .pre-commit  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  flake.nix
.github/workflows/: build.yml  nix.yml
etc/: sample.yaml
src/: ControlMode.h  Controller.cpp  Controller.hpp  GravComp.cpp  InterfaceMCRTC.cpp  InterfaceMCRTC.hpp  MCFrankaControl.cpp  MCFrankaControlMulti.cpp  MCFrankaControlMultiTest.cpp  MCFrankaPositionControl.cpp  MCFrankaTorqueControl.cpp  PandaControlLoop.h  PandaControlType.h  PandaObserveLoop.h  PrintPandaState.cpp  StopCobotPump.cpp  StopPandaPump.cpp  TestCobotPump.cpp  TestCobotPumpViaMCRTC.cpp  defs.h  main.cpp  thread.h
